CORE-29726: Featured/Staff/Expert/TopContributor Badges added.
CORE-29726: Resolved conflicts.

[develop-bazaarvoice-phase2]CORE-29163:BV - Badges -- theming

CORE-29726: updated for review comments.

CORE-29726: updated for review comments.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -46,6 +46,7 @@ $scarlet-two: #d0011b;
 $pale-grey: #e8eff5;
 $tomato: #e6591a;
 $medium-green: #3ab549;
+$badge-green: #2d9921;
 // Mother care custom colors
 $white-smoke: #f4f4f4;
 $white-smoke-light: #f2f2f2;
@@ -1689,6 +1690,10 @@ $rr-form-head-row-border: $marine-blue-two;
 $rr-thumbnail-img-bg: $white-smoke-light;
 $rr-write-review-disabled-btn: $light-greyish;
 $rr-write-review-disabled-border: $light-greyish;
+$rr-badges-text: $black-two;
+$rr-verified-purchaser-text: $badge-green;
+$rr-verified-purchaser-icon-bg: $badge-green;
+$rr-verified-purchaser-icon: $white-five;
 
 // Fawry colors.
 $fawry-desc-prefix: $_gray_222;
