CORE-29603: HFD secondary main menu theming desktop.

--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level1.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level1.html.twig
@@ -1,4 +1,4 @@
-<div class="secondary--main--menu" >
+<div class="secondary--main--menu" style="display: none">
   <ul class="menu__list menu--one__list">
     <div class="menu-backdrop"></div>
     {% if (menu_type == 'default') %}
