--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -1713,3 +1713,7 @@ $plp-quick-view-product-success: $_spc-radio-filled;
 // Smart Agent colors.
 $smart-agent-banner-bg: $_smart_agent_banner;
 $smart-agent-banner-color: $white-five;
+
+// HFD secondary menu.
+$hfd-menu-link-color: $grey-light;
+$hfd-menu-link-color-hover: $black;
