--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level2.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level2.html.twig
@@ -2,18 +2,20 @@
   <div class="menu__links__wrapper">
     {% if (menu_type == 'default') or (menu_type == 'menu_dynamic_display') %}
       <span class="back--link"><span class="menu__back"></span> <span>{{ data.l1_object.title }}</span></span>
-      {% for key, columns in data.columns %}
+      {% for key, columns in data.l1_object.below %}
         <div class="column {{ key }}">
-          {% for key1, level2 in columns %}
-            <li class="menu__list-item menu--two__list-item {{ level2.class|join(' ') }} {{ level2.move_to_right ? 'move-to-right' : '' }}">
-              <div class="menu__link-wrapper menu-two__link-wrapper">
-                  <{{ level2.tag }} class="menu__link menu-two__link  {{ level2.class|join(' ') }} {{level2.sub_nav_class}}" {{ level2.tag_attr }}>{{ level2.title }}</{{ level2.tag }}>
-              </div>
-              {% if level2.below is not empty %}
-                {{ alshaya_secondary_main_menu('alshaya_secondary_main_menu_level3', level2) }}
+          <li class="menu__list-item menu--two__list-item {{ columns.class|join(' ') }} {{ columns.move_to_right ? 'move-to-right' : '' }}">
+            <div class="menu__link-wrapper menu-two__link-wrapper">
+              {% if columns.url.toString is not empty %}
+                <a href="{{columns.url}}" class="menu__link menu-two__link {{ columns.class|join(' ') }} {{columns.sub_nav_class}}">{{ columns.title }}</a>
+              {% else %}
+                <div class="menu__link menu-two__link {{ columns.class|join(' ') }} {{columns.sub_nav_class}}">{{ columns.title }}</div>
               {% endif %}
-             </li>
-           {% endfor %}
+            </div>
+              {% if columns.below is not empty %}
+                {{ alshaya_secondary_main_menu('alshaya_secondary_main_menu_level3', columns) }}
+              {% endif %}
+          </li>
          </div>
       {% endfor %}
     {% endif %}
