--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level3.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level3.html.twig
@@ -4,11 +4,12 @@
     {% for key, level3 in data.below %}
       <li class="menu__list-item menu--three__list-item {{ level3.class|join(' ') }}">
         <div class="menu__link-wrapper menu-two__link-wrapper">
-          <{{ level3.tag }} class="menu__link menu--three__link {{ level3.class|join(' ') }} {{ data.sub-nav-class }}" {{ level3.tag_attr }}>{{ level3.title }}</{{ level3.tag }}>
-        </div>
-        {% if level3.below is not empty %}
-          {{ alshaya_secondary_main_menu('alshaya_secondary_main_menu_level4', level3) }}
+        {% if level3.url.toString is not empty %}
+          <a herf="{{level3.url}}" class="menu__link menu--three__link {{ level3.class|join(' ') }} {{ level3.sub-nav-class }}">{{ level3.title }}</a>
+        {% else %}
+          <div class="menu__link menu--three__link {{ level3.class|join(' ') }} {{ level3.sub-nav-class }}">{{ level3.title }}</div>
         {% endif %}
+        </div>
       </li>
     {% endfor %}
   </div>
