--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level3.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level3.html.twig
@@ -5,7 +5,7 @@
       <li class="menu__list-item menu--three__list-item {{ level3.class|join(' ') }}">
         <div class="menu__link-wrapper menu-two__link-wrapper">
         {% if level3.url.toString is not empty %}
-          <a herf="{{level3.url}}" class="menu__link menu--three__link {{ level3.class|join(' ') }} {{ level3.sub-nav-class }}">{{ level3.title }}</a>
+          <a href="{{level3.url}}" class="menu__link menu--three__link {{ level3.class|join(' ') }} {{ level3.sub-nav-class }}">{{ level3.title }}</a>
         {% else %}
           <div class="menu__link menu--three__link {{ level3.class|join(' ') }} {{ level3.sub-nav-class }}">{{ level3.title }}</div>
         {% endif %}
