--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
@@ -56,6 +56,7 @@
                 margin-bottom: 0.9375rem;
                 font-size: 1rem;
                 line-height: 1.125rem;
+                display: inline-block;
               }
             }
 
@@ -63,7 +64,7 @@
               padding: 0;
 
               > .menu__link-wrapper {
-                margin-bottom: 0.9375rem;
+                margin: 0;
               }
             }
           }
@@ -77,9 +78,12 @@
               }
 
               .menu__link-wrapper {
-                a.menu__link {
+                a.menu__link,
+                div.menu__link {
                   color: $hfd-menu-link-color !important;
                   line-height: 2 !important;
+                  margin-bottom: 0;
+                  font-size: 0.875rem !important;
 
                   &:hover {
                     cursor: pointer;
