CORE-29603: Adjust line height of menu items.

--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -1,4 +1,6 @@
 .block-alshaya-algolia-react-autocomplete {
+  width: 14.812rem;
+
   @include breakpoint($only-mobile) {
     visibility: hidden;
     top: 4rem;
