--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
@@ -81,8 +81,8 @@
                 a.menu__link,
                 div.menu__link {
                   color: $hfd-menu-link-color !important;
-                  line-height: 2 !important;
-                  margin-bottom: 0;
+                  line-height: 1.2 !important;
+                  margin-bottom: 0.6rem;
                   font-size: 0.875rem !important;
 
                   &:hover {
