--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -1717,3 +1717,5 @@ $smart-agent-banner-color: $white-five;
 // HFD secondary menu.
 $hfd-menu-link-color: $grey-light;
 $hfd-menu-link-color-hover: $black;
+$hfd-menu-background: #f8f8f8;
+
