--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -5,7 +5,6 @@
   background: $primary_btn_bg;
   color: $primary_btn_text;
   display: inline-block;
-  text-transform: uppercase;
   height: 2.5rem;
   width: 100%;
   padding: 0.625rem 1.25rem;
@@ -14,6 +13,8 @@
 
   @include breakpoint($only-mobile) {
     height: 2.1875rem;
+    padding-#{$left}: 0.5rem;
+    padding-#{$right}: 0.5rem;
   }
 }
 
