CORE-30582: Updated listing page button on hover background color for VS.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -5,4 +5,8 @@
   text-transform: uppercase;
 
   @include normal-arabic-letter-spacing;
+
+  &:hover {
+    background: $plp-primary-cta-hover-bg;
+  }
 }
