--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/config/_colors.scss
@@ -96,6 +96,7 @@ $alabaster: #fcfcfc;
 $smoky-white: #1f1f1f;
 $light-white: #fdf1f5;
 $dark-pink: #fc45b2;
+$pink-hover:  #d84e82;
 
 // Custom colors with no names in VS design.
 $_grey-51-6: rgba(51, 51, 51, 0.06);
@@ -519,6 +520,7 @@ $plp_facet_border: $gainsboro;
 $plp_item_label: $black;
 $plp_promotion_description: $ash-triplet;
 $plp_facet_filter_count_background: $brilliant-rose;
+$plp-primary-cta-hover-bg: $pink-hover;
 
 // PLP Filter bar.
 $plp_filterbar_filter_bg: $nero;
