CORE-30691: Add to bag notification theming fixes.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/products/_product-detail.scss
@@ -563,6 +563,7 @@ article[gtm-sku-type="simple"] {
     &.desc-open {
       #{$right}: 0;
       transition: $right 0.5s ease;
+      overflow-y: auto;
     }
 
     .desc-wrapper {
