--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/spc-cart/component/_spc-recommended-products.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/spc-cart/component/_spc-recommended-products.scss
@@ -2,6 +2,12 @@
   @include breakpoint($tablet) {
     padding: 1.875rem;
     padding-#{$right}: 0;
+
+    .spc-product-price {
+      .special--price {
+        margin-#{$left}: 0;
+      }
+    }
   }
 
   .block-content {
