CORE-30185: Fixed grouped filters to adjust in single row.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-select-popup.scss
@@ -134,6 +134,13 @@
           }
         }
 
+        .group-anchor-links {
+          @include breakpoint($only-mobile) {
+            width: 13rem;
+            flex-shrink: 0;
+          }
+        }
+
         .size-guide {
           position: relative;
           text-align: center;
