--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
@@ -220,6 +220,7 @@ $spc-order-summary-discount-text: $black;
 $spc_tooltip_icon: $cyprus;
 $spc-promo-code-remove-cross: $cyprus;
 $spc_tooltip_question_icon: $black;
+$spc-checkout-success-message-background: $brighton-green;
 
 // Product detail page
 $pdp_product_special_price_text: $poster-orange;
