CORE-30571: Resolving parent sku issue for my account section.

--- a/docroot/themes/custom/transac/alshaya_hnm/templates/user/user-recent-order.html.twig
+++ b/docroot/themes/custom/transac/alshaya_hnm/templates/user/user-recent-order.html.twig
@@ -139,7 +139,7 @@
 
     {% if item.bazaarvoice_link %}
       <td class="above-mobile user-review">
-        <div class="myaccount-write-review" data-sku={{ item.sku }}></div>
+        <div class="myaccount-write-review" data-sku={{ item.parent_sku }}></div>
       </td>
     {% endif %}
   </tr>
