--- a/docroot/modules/custom/alshaya_acm_customer/templates/user-order-detail.html.twig
+++ b/docroot/modules/custom/alshaya_acm_customer/templates/user-order-detail.html.twig
@@ -420,7 +420,7 @@
     </td>
     {% if product.bazaarvoice_link %}
       <td class="above-mobile user-review">
-        <div class="myaccount-write-review" data-sku={{ product.sku }}></div>
+        <div class="myaccount-write-review" data-sku={{ product.parent_sku }}></div>
       </td>
     {% endif %}
   </tr>
