CORE-30736: Letter spacing fixed for Arabic language.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/facet/_filters.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/facet/_filters.scss
@@ -7,6 +7,8 @@
   @include breakpoint($upto-desktop) {
     font-size: 0.875rem;
   }
+
+  @include arabic-letter-spacing;
 }
 
 %filter-label-fixed {
