--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
@@ -230,6 +230,8 @@
     .view-header p {
       color: $store_finder_subheader;
       letter-spacing: 0.00625rem;
+
+      @include arabic-letter-spacing;
     }
   }
 
