--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/order/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/order/_order-print.scss
@@ -251,6 +251,8 @@ body {
       font-size: 12px;
       letter-spacing: 0.1875rem;
       right: 0.9em;
+
+      @include arabic-letter-spacing;
     }
   }
 }
