--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/user/_user-helper.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/user/_user-helper.scss
@@ -180,6 +180,8 @@
     .form-type-password .form-text {
       font-size: 1rem;
       letter-spacing: 0.1875rem;
+
+      @include arabic-letter-spacing;
     }
 
     .form-item:first-child {
