--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/user/_user.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/user/_user.scss
@@ -833,6 +833,8 @@
           @include breakpoint($upto-desktop) {
             font-size: 0.75rem;
           }
+
+          @include arabic-letter-spacing;
         }
 
         .date {
