--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/cloudzoom/_cloudzoom.scss
@@ -87,6 +87,19 @@
             }
           }
         }
+
+        .slick-slide {
+          width: 6.625rem !important;
+          height: 6.625rem !important;
+
+          @include breakpoint($desktop) {
+            margin: 0.3125rem 0.6875rem;
+          }
+
+          @include breakpoint($only-tablet) {
+            margin: 0 0.3125rem;
+          }
+        }
       }
     }
   }
