CORE-30582: Updated letter-spacing for VS primary CTA text on listing page.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -2,7 +2,7 @@
 .product-drawer-content-wrapper .config-form-addtobag-button {
   font-family: $vs-bentonsanscomp-medium;
   font-weight: 700;
-  letter-spacing: 0.15em !important;
+  letter-spacing: 0.15em;
   text-transform: uppercase;
 
   @include normal-arabic-letter-spacing;
