CORE-30687: Removed unnecessary max-height and width auto added on PLP images.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_plp-hover-slider.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_plp-hover-slider.scss
@@ -47,8 +47,9 @@
 .view-alshaya-product-list {
   .c-products__item {
     .alshaya_search_mainimage {
-      img {
-        width: auto;
+      & > img,
+      .img-wrapper img {
+        width: 100%;
       }
     }
 
