--- a/docroot/themes/custom/transac/alshaya_boots/sass/components/products/_products-list.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/components/products/_products-list.scss
@@ -211,3 +211,16 @@
     }
   }
 }
+
+#hits,
+#plp-hits,
+.view-alshaya-product-list {
+  .c-products__item {
+    .alshaya_search_mainimage {
+      & > img {
+        height: 100%;
+        width: auto;
+      }
+    }
+  }
+}
