--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -1,6 +1,4 @@
 .block-alshaya-algolia-react-autocomplete {
-  width: 14.812rem;
-
   @include breakpoint($only-mobile) {
     visibility: hidden;
     top: 4rem;
@@ -14,6 +12,11 @@
 
   @include breakpoint($only-tablet) {
     bottom: -3.5rem;
+  }
+
+  @include breakpoint($desktop) {
+    width: 14.812rem !important;
+    padding: 0;
   }
 
   .algolia-search-cleartext-icon {
@@ -38,7 +41,7 @@
     border-radius: 0;
     height: 3.125rem;
     padding-#{$left}: 3.5rem;
-    padding-#{$right}: 1.5rem;
+    padding-#{$right}: 1.4rem;
     font-size: 0.9375rem;
     line-height: 2.5;
 
@@ -48,6 +51,7 @@
 
     @include breakpoint($tablet) {
       border-bottom-color: $algolia-auto-complete-border-bottom;
+      width: 14.812rem;
     }
 
     &::placeholder {
@@ -65,7 +69,8 @@
 
   #alshaya-algolia-autocomplete {
     @include breakpoint($tablet) {
-      width: 20.25rem;
+      width: 14.812rem;
+      padding: 0;
     }
 
     .react-autosuggest__container {
