CORE-30716: Shopping bag title display on mobile.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/spc-cart/component/_spc-cart-page.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/spc-cart/component/_spc-cart-page.scss
@@ -4,3 +4,11 @@
     font-family: $alshaya-bold;
   }
 }
+
+#spc-cart {
+  .spc-content {
+    .spc-checkout-section-title {
+      display: block;
+    }
+  }
+}
