--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/order/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/order/_order-details.scss
@@ -1,4 +1,6 @@
 .user__order--detail {
+  line-height: normal;
+
   .price-currency {
     font-family: $tbs-semibold;
     color: $primary_text;
@@ -14,7 +16,8 @@
     color: $order_detail_order_price_amount;
   }
 
-  .label {
+  .label,
+  .address--contact {
     font-family: $alshaya-bold;
     color: $order_detail_order_label;
   }
@@ -48,5 +51,11 @@
     .dark {
       margin-bottom: 0.625rem;
     }
+  }
+
+  .dark,
+  .address--content,
+  .address--contact .no-direction {
+    font-family: $tbs-medium;
   }
 }
