CORE-30205: CS/US modal theming and header fixes.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/cloudzoom/_cloudzoom.scss
@@ -90,6 +90,10 @@
         min-height: 26.31rem;
       }
     }
+
+    .cloudzoom__thumbnails {
+      margin-bottom: 1.5rem;
+    }
   }
 
   #product-zoom-container {
