CORE-30713: Updated product title font for quick drawer on listing page.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -92,8 +92,9 @@
     }
 
     .product-title {
-      display: inline-block;
+      font-family: $alshaya-thin;
       font-size: 1.125rem;
+      display: inline-block;
       line-height: normal;
       color: $primary-text;
       padding-bottom: 0.625rem;
