CORE-30779: Mobile header UI issue resolved.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -94,6 +94,8 @@
       .block-alshaya-algolia-react-autocomplete {
         padding: 0;
       }
+
+      margin-top: 7.0625rem !important;
     }
 
     &:not(.path--home) {
