--- a/docroot/modules/custom/alshaya_acm_customer/templates/user-recent-order.html.twig
+++ b/docroot/modules/custom/alshaya_acm_customer/templates/user-recent-order.html.twig
@@ -52,7 +52,7 @@
         <div class="button {{ order.status.class }}">{{ order.status.text }}</div>
       </td>
 
-      <td class="above-mobile toggle--icon">
+      <td class="above-mobile toggle--icon" colspan="{{ order.bazaarvoice ? '2' : '' }}">
         <div class="light">{{ "Order Total"|t }}</div>
         <div class="dark">{{ order.totals.grand }}</div>
         <div class="icon-ic_chevrondown"></div>
@@ -84,7 +84,7 @@
     {% endif %}
 
     <tr class="order-item-row order__detail--link">
-      <td colspan="4" class="desktop-only">
+      <td colspan="{{ order.bazaarvoice ? '5' :'4' }}" class="desktop-only">
         <a href="{{ path('alshaya_acm_customer.orders_detail', {'user': order.user_id, 'order_id': order.id}) }}">{{ 'View order details'| t }}</a>
       </td>
       <td colspan="3" class="tablet-only">
