CORE-30827: Fixed loader UI inside quick view drawer for VS AR.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -236,7 +236,7 @@
       }
 
       &.add-to-bag-loader {
-        font-size: 0;
+        font-size: 0 !important;
         pointer-events: none;
       }
 
