CORE30151-HFD: Secondary menu highlights and block table removal bug fix.

--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level2.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level2.html.twig
@@ -20,4 +20,11 @@
       {% endfor %}
     {% endif %}
   </div>
+    {% if (menu_type == 'default') %}
+    <div class="term-image__wrapper">
+      {#Highlight image starts#}
+      {{ alshaya_secondary_main_menu('alshaya_secondary_main_menu_highlights', data.l1_object) }}
+      {#Highlight image end#}
+    {% endif %}
+    </div>
 </ul>
