--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
@@ -116,6 +116,22 @@
           }
         }
       }
+
+      .new--column {
+        padding-top: 2rem;
+
+        li.menu--three__list-item {
+          a.menu__link {
+            margin-bottom: 0.6rem !important;
+            color: $hfd-menu-link-color !important;
+            line-height: 1.2 !important;
+
+            &:hover {
+              color: $hfd-menu-link-color-hover !important;
+            }
+          }
+        }
+      }
     }
   }
 }
