--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
@@ -43,6 +43,7 @@ $green-two: #357a74;
 $green-three: #004435;
 $frangipani: #ffd1a1;
 $error-red: $alizarin;
+$gray_orange: #f4ece6;
 
 /* ------- 2. Primary Colors ------- */
 // Global elements.
@@ -249,6 +250,7 @@ $pdp-ingredient-modal-border: $cyprus;
 $pdp-ingredient-modal-bg: $white;
 $pdp-ingredient-modal-cross-icon: $white;
 $pdp-ingredient-modal-cross-icon-bg: $cyprus;
+$pdp_how_to_use_bg: $gray_orange;
 
 // Checkout Global.
 $checkout_header_border-bottom: $cyprus;
