--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
@@ -211,7 +211,7 @@ set classes = [
 
           </div>
 
-          {% block contentHowToUseMobile %}
+          {% block productPostContentMobile %}
           {% endblock %}
 
           {% include directory ~ '/../alshaya_white_label/templates/partial/mobile-product-related.html.twig' %}
@@ -229,10 +229,7 @@ set classes = [
 
   </div>
 
-  {% block contentHowToUseDesktop %}
-  {% endblock %}
-
-  {% block fullCS %}
+  {% block productPostContent %}
   {% endblock %}
 
 </article>
