CORE-30774: Add ellipsis to long text menu items.

--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-secondary-main-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-secondary-main-menu.scss
@@ -4,6 +4,8 @@
       ul.menu--one__list {
         li.menu--one__list-item {
           &.has-child {
+            margin-right: 0.9375rem;
+
             a.menu--one__link {
               position: relative;
 
