--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
@@ -24,12 +24,18 @@
         &__list {
           display: flex !important;
           justify-content: center;
+          max-width: 50rem;
         }
       }
 
       li.menu--one {
         &__list-item {
           height: 1.25rem;
+          min-width: 0;
+
+          .menu__link-wrapper {
+            margin: 0 0.9375rem;
+          }
 
           .menu__link {
             text-transform: capitalize;
@@ -38,12 +44,12 @@
           .menu--one__link {
             height: auto;
             padding: 0 0 0.125rem;
-            margin: 0 0.9375rem;
             border-bottom: 0;
             color: $hfd-menu-link-color;
             font-family: $open-sans;
             font-size: 0.8125rem;
             line-height: 1.38;
+            margin: 0;
           }
 
           .menu--two__list {
@@ -69,6 +75,21 @@
               > .menu__link-wrapper {
                 margin: 0;
               }
+            }
+          }
+
+          &.wrap-link-text {
+            min-width: 0;
+
+            .menu__link-wrapper {
+              max-width: 6rem;
+            }
+
+            .menu--one__link {
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              display: block;
             }
           }
 
