CORE-30902: Language switcher theming fixes.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
@@ -394,6 +394,14 @@ $breadcrumb_link: $cyprus;
 $breadcrumb_link_active: $cyprus;
 $breadcrumb_link_hover: $cyprus;
 
+// Language Switcher
+$lang_switch: $white;
+$lang_switch_active: $white;
+$lang_switch_firsttime_bg: $cyprus;
+$lang_switch_firsttime_border: $white;
+$lang_switch_list: $white;
+$lang_switch_close_icon: $white;
+
 // Back to top
 $btt_bg: $_gray_98;
 $btt-border: $grey-four;
