--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/footer/_footer-primary.scss
@@ -229,8 +229,18 @@
 }
 
 .language--switcher.mobile-only-block {
-  @include breakpoint($only-mobile) {
-    padding-bottom: 1rem;
+  &:not(.only-first-time) {
+    @include breakpoint($only-mobile) {
+      padding-bottom: 1rem;
+    }
+  }
+}
+
+.language--switcher {
+  &.only-first-time {
+    ul {
+      height: 2.188rem;
+    }
   }
 }
 
@@ -240,6 +250,18 @@
     li {
       a {
         text-transform: capitalize;
+      }
+
+      &.en {
+        a {
+          font-family: $tbs-regular;
+        }
+      }
+
+      &.ar {
+        a {
+          font-family: $arial-nodir;
+        }
       }
     }
   }
