CORE-30732: Arabic font fixes.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/_directional.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/_directional.scss
@@ -4,3 +4,7 @@ $tbs-semibold: if-ltr($tbs-semibold, $tbs-arabic-semibold);
 $tbs-arabic-semibold: if-ltr($tbs-arabic-semibold, $tbs-semibold);
 $tbs-recoleta-semibold: if-ltr($tbs-recoleta-semibold, $tbs-recoleta-arabic-medium);
 $tbs-arabic-recoleta-semibold: if-ltr($tbs-recoleta-arabic-medium, $tbs-recoleta-semibold);
+$tbs-light: if-ltr($tbs-light, $tbs-arabic-regular);
+$tbs-arabic-light: if-ltr($tbs-arabic-regular, $tbs-light);
+$tbs-recoleta-medium: if-ltr($tbs-recoleta-medium, $tbs-recoleta-arabic-medium);
+$tbs-arabic-recoleta-medium: if-ltr($tbs-recoleta-arabic-medium, $tbs-recoleta-medium);
