CORE-30858: Fixed HM UI issues for PLP add to cart.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -769,3 +769,12 @@ $rr-form-head-row-border: $hnm-black-three;
 $pdp_product_same_day: $hnm-black-three;
 $pdp_product_same_day_btn_border: $sky_blue;
 $pdp_product_same_day_btn_bg: $white-five;
+
+// PLP Quick view drawer.
+$plp-quick-view-product-size-text: $primary_text;
+$plp-quick-view-product-size-text-active: $white-five;
+$plp-quick-view-product-size-border: $pdp_swatch_selected_border;
+$plp-quick-view-product-size-border-hover: $gray44;
+$plp-quick-view-product-size-hover-bg: $gray44;
+$plp-quick-view-product-size-active-bg: $primary_btn_bg;
+$plp-quick-view-product-size-text-disabled: $pdp_swatch_disabled;
