--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -19,3 +19,9 @@
     background: $plp-primary-cta-hover-bg;
   }
 }
+
+.is-not-buyable,
+.addtobag-config-button,
+.addtobag-simple-button-container {
+  text-transform: uppercase;
+}
