--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart-qty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart-qty.scss
@@ -86,7 +86,10 @@
   @include breakpoint($tablet) {
     width: 5rem;
   }
+}
 
+.form-select-wrapper,
+.alshaya-select-wrapper {
   .alshayaSelect {
     &__value-container {
       @include breakpoint($tablet) {
