--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/plp-add-to-cart/component/_product-attribute.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/plp-add-to-cart/component/_product-attribute.scss
@@ -6,4 +6,40 @@
   &_season_code {
     margin: 0;
   }
+
+  .alshaya-select {
+    .alshayaSelect__control {
+      font-size: 0.6875rem;
+
+      .alshayaSelect__dropdown-indicator::before {
+        font-size: 0.5rem;
+        top: 52%;
+      }
+    }
+  }
+
+  &.attribute-wrapper_size {
+    @include breakpoint($only-mobile) {
+      float: none;
+      width: 8rem;
+    }
+
+    @include breakpoint($tablet) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.form-list-wrapper,
+.attribute-wrapper {
+  ul.attribute-options-list {
+    li {
+      &:not(.active) {
+        &:hover {
+          border-color: $plp-quick-view-product-size-border-hover;
+          background: $plp-quick-view-product-size-hover-bg;
+        }
+      }
+    }
+  }
 }
