--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
@@ -160,69 +160,6 @@ header {
     }
   }
 
-  .block-cart-mini-block,
-  .block-alshaya-react-mini-cart {
-    @include arabic-letter-spacing;
-
-    font-size: 0.8125rem;
-    letter-spacing: 0.5px;
-
-    @include breakpoint($only-tablet) {
-      width: 2rem;
-      position: absolute !important;
-      #{$right}: 1.5rem;
-      top: 0.6875rem;
-    }
-
-    .total {
-      margin-#{$right}: 1.25rem;
-    }
-
-    .cart-link {
-      @include icon(shopping-bag) {
-        font-size: 1.85rem;
-        position: absolute;
-        #{$right}: -0.5rem;
-        top: -0.375rem;
-      }
-
-      &:hover {
-        color: $cart_icon_hover;
-      }
-
-      width: 1.375rem;
-      height: 1.375rem;
-      vertical-align: middle;
-      background: none;
-    }
-
-    .cart-link-total {
-      color: $seconday_menu_link;
-      margin-top: 0.3125rem;
-      margin-#{$right}: 0.125rem;
-    }
-
-    .quantity {
-      font-size: 0.75rem;
-      font-family: $hnm-regular-nodir;
-      bottom: -0.625rem;
-      line-height: 1.25rem;
-    }
-
-    @include breakpoint($only-mobile) {
-      .cart-link {
-        width: 1.875rem;
-        height: 1.875rem;
-
-        &::before {
-          font-size: 1.65rem;
-          #{$right}: 0;
-          top: 0.25rem;
-        }
-      }
-    }
-  }
-
   @include breakpoint($only-tablet) {
     #mini-cart-wrapper {
       margin-top: -0.4375rem;
@@ -1168,9 +1105,73 @@ html[lang='ar'] {
 }
 
 #block-cartminiblock,
-.block-alshaya-react-mini-cart {
+.block-alshaya-react-mini-cart,
+.static-minicart-wrapper {
+  @include arabic-letter-spacing;
+
+  font-size: 0.8125rem;
+  letter-spacing: 0.5px;
+
+  .total {
+    margin-#{$right}: 1.25rem;
+  }
+
+  .cart-link {
+    @include icon(shopping-bag) {
+      font-size: 1.85rem;
+      position: absolute;
+      #{$right}: -0.5rem;
+      top: -0.375rem;
+    }
+
+    &:hover {
+      color: $cart_icon_hover;
+    }
+
+    width: 1.375rem;
+    height: 1.375rem;
+    vertical-align: middle;
+    background: none;
+  }
+
+  .cart-link-total {
+    color: $seconday_menu_link;
+    margin-top: 0.3125rem;
+    margin-#{$right}: 0.125rem;
+  }
+
+  .quantity {
+    font-size: 0.75rem;
+    font-family: $hnm-regular-nodir;
+    bottom: -0.625rem;
+    line-height: 1.25rem;
+  }
+
+  @include breakpoint($only-mobile) {
+    .cart-link {
+      width: 1.875rem;
+      height: 1.875rem;
+
+      &::before {
+        font-size: 1.65rem;
+        #{$right}: 0;
+        top: 0.25rem;
+      }
+    }
+  }
+
   @include breakpoint($desktop) {
     top: -0.25rem;
+  }
+}
+
+#block-cartminiblock,
+.block-alshaya-react-mini-cart {
+  @include breakpoint($only-tablet) {
+    width: 2rem;
+    position: absolute !important;
+    #{$right}: 1.5rem;
+    top: 0.6875rem;
   }
 }
 
