Revert "CORE-29519: Fixed z-index issue on drawer overlay."
This reverts commit 5380f4e610a70bcabde94e183985c4aebf89bd00.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -408,8 +408,7 @@
       }
     }
 
-    &.mobile--overlay,
-    &.overlay-product-modal {
+    &.mobile--overlay {
       .block-alshaya-algolia-react-autocomplete {
         border-color: $header_mobile_menu_overlay;
 
