CORE-30572: How to use content top margin fix.

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/components/products/_product-detail.scss
@@ -408,6 +408,12 @@ article[gtm-sku-type="simple"] {
       }
     }
   }
+
+  .content__sidebar {
+    @include breakpoint($desktop) {
+      margin-bottom: 5rem;
+    }
+  }
 }
 
 .nodetype--acq_product,
