--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -249,24 +249,11 @@
   }
 }
 
-body {
-  &.overlay-product-modal {
-    overflow: hidden !important;
-
-    &::before {
-      background-color: rgba(0, 0, 0, 0.48);
-      opacity: 1;
-      z-index: 12;
-      transform: translate3d(0, 0, 0);
-      height: 100%;
-      pointer-events: unset;
-      top: 0;
-    }
-
-    .product-drawer-container {
-      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
-      transform: translateX(0) !important;
-      opacity: 1;
-    }
+html.overlay-product-modal ,
+body.mobile--overlay {
+  .product-drawer-container {
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 0ms cubic-bezier(0, 0, 0.2, 1);
+    transform: translateX(0) !important;
+    opacity: 1;
   }
 }
