CORE-30961: Fixed mini cart, notification and size attribute UI issues.

--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -1,3 +1,10 @@
 .addtobag-button {
   background: $plp-add-to-cart-btn-bg;
 }
+
+.addtobag-simple-button-container,
+.is-not-buyable,
+.addtobag-config-button {
+  font-family: $alshaya-thin;
+  text-transform: uppercase;
+}
