--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_smart-agent-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_smart-agent-header.scss
@@ -1,38 +1,40 @@
-nav.menu--account.smart-agent-login + .smart-agent-header-wrapper {
-  padding: 0 1rem;
-  display: inline-flex;
-  align-items: center;
-  height: 1.5rem;
-  background: $smart-agent-banner-bg;
-
-  > span {
-    font-size: 0.6875rem;
-    text-transform: none;
-    color: $smart-agent-banner-color;
-
-    &.agent-logout {
-      cursor: pointer;
-      padding-#{$left}: 1rem;
-      text-decoration: underline;
-    }
-  }
-
-  @include breakpoint($upto-desktop) {
-    margin: 0 auto;
-    width: 100%;
-    display: none;
+nav.menu--account.smart-agent-login {
+  + .smart-agent-header-wrapper {
+    padding: 0 1rem;
+    display: inline-flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 1.25rem 0;
-    height: auto;
+    height: 1.5rem;
+    background: $smart-agent-banner-bg;
 
     > span {
-      font-size: 0.875rem;
-      padding: 0.5rem 0;
+      font-size: 0.6875rem;
+      text-transform: none;
+      color: $smart-agent-banner-color;
 
       &.agent-logout {
-        padding-#{$left}: 0;
+        cursor: pointer;
+        padding-#{$left}: 1rem;
+        text-decoration: underline;
+      }
+    }
+
+    @include breakpoint($upto-desktop) {
+      margin: 0 auto;
+      width: 100%;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 1.25rem 0;
+      height: auto;
+
+      > span {
+        font-size: 0.875rem;
+        padding: 0.5rem 0;
+
+        &.agent-logout {
+          padding-#{$left}: 0;
+        }
       }
     }
   }
