--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -1,10 +1,6 @@
-.addtobag-button {
-  background: $plp-add-to-cart-btn-bg;
-}
-
-.addtobag-simple-button-container,
+.addtobag-button,
 .is-not-buyable,
-.addtobag-config-button {
-  font-family: $alshaya-thin;
+.addtobag-config-button,
+.config-form-addtobag-button {
   text-transform: uppercase;
 }
