--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -1,14 +1,28 @@
 .product-drawer {
   &-content-wrapper {
-    .config-form-addtobag-button {
-      &.add-to-bag-loader.tick span {
-        font-size: 0.8125rem;
-      }
+    .price {
+      font-family: $alshaya-bold;
+      font-size: 1.375rem;
     }
 
-    .price,
+    .has--special--price .price {
+      font-family: $alshaya-thin;
+      font-size: 1.125rem;
+    }
+
     .price--discount {
-      font-size: 1rem;
+      font-size: 0.875rem;
+    }
+
+    .vat-text,
+    .content--item-code {
+      font-size: 0.875rem;
+    }
+
+    .vat-text,
+    .content--item-code,
+    .has--special--price .price {
+      color: $magv2-vat-text;
     }
   }
 }
