--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-share-panel.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-share-panel.scss
@@ -157,7 +157,9 @@
     transition: all 0.3s ease-in-out;
 
     @include breakpoint($desktop) {
-      height: 1.5rem;
+      html[lang=en] & {
+        height: 1.5rem;
+      }
     }
 
     &:hover,
